--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <h1>&lt;/[Tu Nombre]&gt;</h1>
+      <h1>&lt;/Polsyto&gt;</h1>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#sobre-mi">Sobre mí</a></li>
@@ -21,8 +21,8 @@
   </header>
 
   <section id="inicio" class="seccion">
-    <h2>¡Hola! Soy [Tu Nombre]</h2>
-    <p>Estudiante de Desarrollo de Aplicaciones Web. Futuro desarrollador multiplataforma y especialista en ciberseguridad.</p>
+    <h2>¡Hola! Soy POlsyto</h2>
+    <p>Estudiante de Desarrollo de Aplicaciones Web y creador de contenido de tecnología. Futuro desarrollador web y multiplataforma y especialista en ciberseguridad.</p>
   </section>
 
   <section id="sobre-mi" class="seccion">
@@ -34,9 +34,9 @@
     <h2>Proyectos</h2>
     <div class="grid-proyectos">
       <div class="proyecto">
-        <h3>Catálogo de Cervezas XML + XSLT</h3>
-        <p>Transformación de un XML en una web visual con XSLT.</p>
-        <a href="https://github.com/tuusuario/cervezas" target="_blank">Ver en GitHub</a>
+        <h3>Pagina Web Attack on Titan</h3>
+        <p>Una de mis primares web, en la que añadí informacion, episodios y galeria de imagenes</p>
+        <a href="https://github.com/Polsyt0/html/Proyecto series" target="_blank">Ver en GitHub</a>
       </div>
     </div>
   </section>
@@ -52,11 +52,11 @@
 
   <section id="contacto" class="seccion">
     <h2>Contacto</h2>
-    <p>Puedes escribirme a: <a href="mailto:tuemail@example.com">tuemail@example.com</a></p>
+    <p>Puedes escribirme a: <a href="mailto:polsyto.contactogmail.com">polsyto.contacto@gmail.com</a></p>
   </section>
 
   <footer>
-    <p>© 2025 [Tu Nombre] - Todos los derechos reservados.</p>
+    <p>© 2025 Polsyto - Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
