--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Portafolio - [Tu Nombre]</title>
+  <title>Mi Portafolio - Polsyto</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
@@ -21,7 +21,7 @@
   </header>
 
   <section id="inicio" class="seccion">
-    <h2>¡Hola! Soy POlsyto</h2>
+    <h2>¡Hola! Soy Polsyto</h2>
     <p>Estudiante de Desarrollo de Aplicaciones Web y creador de contenido de tecnología. Futuro desarrollador web y multiplataforma y especialista en ciberseguridad.</p>
   </section>
 
